[package]
name = "cli-parsers"
version = "0.1.0"
authors = ["Sam Rose <samwho@lbak.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
maplit = "1.0.2"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }